complete Creating The Color Game Pt. 5 - add stripe and button for new colors or playing again;  fixed background being stuck as color of last winning color

--- a/15_ColorGameProject/colorGame.css
+++ b/15_ColorGameProject/colorGame.css
@@ -19,6 +19,10 @@ h1 {
     color: #bdc3c7;
 }
 
-span {
-    color: white;
+
+#stripe {
+    background: white;
+    height: 30px;
+    text-align: center;
+    color: black;
 }
